# othello

./: .gitignore  CMakeLists.txt  COMPETITION_README.md  Makefile  PROJECT_STRUCTURE.md  README.md  analyze_tournament.py  build_my_agent.sh  debug_test.cpp  test_safety_system.sh
agents/include/: agent_du_jardin.h  bitboard_ai_agent.h  greedy_ai_agent.h  mcts_ai_agent.h  minmax_ai_agent.h  panda_ai_agent.h  plagiat_bot.h  random_ai_agent.h
agents/src/: agent_du_jardin.cpp  bitboard_ai_agent.cpp  greedy_ai_agent.cpp  mcts_ai_agent.cpp  minmax_ai_agent.cpp  panda_ai_agent.cpp  plagiat_bot.cpp  random_ai_agent.cpp
examples/: malicious_agent.cpp  malicious_agent.h  my_first_ai_agent.cpp  my_first_ai_agent.h
include/: ai_agent.h  ai_agent_base.h  bitboard.h  board.h  console_game.h  console_interface.h  example_ai_agents.h  gui_interface.h  safe_ai_agent.h  simple_tournament.h  tournament_console.h  tournament_interface.h  tournament_manager.h
src/: ai_agent.cpp  ai_agent_base.cpp  bitboard.cpp  board.cpp  console_game.cpp  console_interface.cpp  example_ai_agents.cpp  gui_interface.cpp  main.cpp  main_console.cpp  main_gui.cpp  main_tournament.cpp  main_tournament_console.cpp  safe_ai_agent.cpp  simple_tournament.cpp  tournament_console.cpp  tournament_interface.cpp  tournament_manager.cpp  tournament_runner.cpp
